website/versioned_docs/version-0.4.0-rc/development/headless-styles/Typography.mdx
---
tags: [headings, body, code, text styles]
---

import BrowserWindow from '@site/src/components/BrowserWindow'
import ViewSourceLink from '@site/src/components/ViewSourceLink/ViewSourceLink'

Our Typography styles are built into our [fonts & normalize setup](../getting-started/installation.md#ps-tt-commons-font). This means, that there is no need for additional typography helpers within this package - it **"just works"**. :raised_hands:

<ViewSourceLink
  icon="github"
  href="https://github.com/pluralsight/tva/blob/main/packages/design-tokens/styles/_typography.scss"
>
  View source
</ViewSourceLink>

## Usage

Our typography relies on the **correct usage of [text syntax](https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/HTML_text_fundamentals)** which by nature will help your apps to become more accessible by nature.

The easiest solution is just to copy/paste the examples we give you in each section of the helper page.

### Headings

For all `headings` we use the `h` tags.

```jsx live title="Heading options"
function Headings() {
  return (
    <header>
      <h1>Heading 1</h1>
      <h2>Heading 2</h2>
      <h3>Heading 3</h3>
      <h4>Heading 4</h4>
      <h5>Heading 5</h5>
      <h6>Heading 6</h6>
    </header>
  )
}
```

### Display Headings

To use a Display Heading, just combine the `black-heading` class with the `display-<size>`, available in `l`, `m`, `s`.

```jsx live title="Display Heading options"
function Headings() {
  return (
    <header>
      <h1 className="black-heading display-l">Heading 1</h1>
      <h2 className="black-heading display-m">Heading 2</h2>
      <h3 className="black-heading display-s">Heading 3</h3>
    </header>
  )
}
```

### Non-heading Text

All other text that is not a `heading` can use the following guide. For **bold** text, just wrap your `p` in a `strong` tag (they way it was always meant to be). :wink:

```jsx live title="Non-heading options"
function NonHeadings() {
  return (
    <div>
      <div>
        <small className="size-xs">Xtra Small Text</small>
      </div>
      <div>
        <strong>
          <small className="size-xs">Bold Xtra Small Text</small>
        </strong>
      </div>
      <div>
        <small>Small Text</small>
      </div>
      <div>
        <strong>
          <small>Bold Small Text</small>
        </strong>
      </div>
      <div>
        <p>Medium Text</p>
      </div>
      <div>
        <strong>
          <p>Bold Medium Text</p>
        </strong>
      </div>
      <div>
        <p className="size-l">Large Text</p>
      </div>
      <div>
        <strong>
          <p className="size-l">Bold Large Text</p>
        </strong>
      </div>
      <div>
        <p className="size-xl">Xtra Large Text</p>
      </div>
      <div>
        <strong>
          <p className="size-xl">Bold Xtra Large Text</p>
        </strong>
      </div>
      <div>
        <p className="size-xxl">XXL Text</p>
      </div>
      <div>
        <strong>
          <p className="size-xxl">Bold XXL Text</p>
        </strong>
      </div>
    </div>
  )
}
```

### CodeBlocks

For the times you need to use `code-styles`. Just use the `code`, `kbd`, or `samp` tags. If you need to change the sizes of the code, just add the `<size>-code` class.

```jsx live title="Code styles"
function CodeStyles() {
  return (
    <div>
      <p>
        This is some text with a <code>inline code</code> example.
      </p>
      <p>
        This is a keyboard shortcut <kbd>shift + K</kbd> example.
      </p>

      <p> This is a output log example:</p>
      <p>
        <samp>Keyboard not found Press F1 to continue</samp>
      </p>
      <p>
        <samp className="large-code">Large code</samp>
      </p>
      <p>
        <samp className="small-code">Small code</samp>
      </p>
      <p>
        <samp className="xs-code">Xtra-small code</samp>
      </p>
    </div>
  )
}
```

### Lists

We support `ul`, `ol`, and `dl` list types through the use of symantic markup combined with class names (for bulleted lists only).

```jsx live title="Lists examples"
function Lists() {
  return (
    <div>
      <ul className="ul-list">
        <li className="ul-list-item">Harry</li>
        <li className="ul-list-item">Ron</li>
        <li className="ul-list-item">Hermoine</li>
      </ul>
      <ol>
        <li>One</li>
        <li>
          Two
          <ol>
            <li>We even support nested lists.</li>
          </ol>
        </li>
      </ol>
      <dl>
        <dt>Single Definition</dt>
        <dd>A term with only one definition.</dd>
        <dt>Multiple Definitions</dt>
        <dd>Some terminology has more than one definition.</dd>
        <dd>This would be an alternate definition.</dd>
      </dl>
    </div>
  )
}
```
